--- a/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
@@ -3,7 +3,6 @@
 @mixin workspaceItem {
   display: flex;
   flex: 1;
-  align-items: center;
   cursor: pointer;
   padding: var(--default-spacing);
   gap: var(--default-spacing);
@@ -13,19 +12,21 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    width: 170px;
+    flex: 1;
+    min-width: 0;
   }
 
   &__plan {
     font-size: 10px;
     color: var(--black60);
-    width: 170px;
   }
 
   &__details {
-    @include flexColumn;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-width: 0;
     font-weight: 400;
-    margin-right: auto;
   }
 }
 
@@ -39,6 +40,7 @@
 
   &__current {
     @include workspaceItem;
+    width: calc(100% - var(--double-spacing));
 
     .amp-button {
       min-width: var(--button-min-width);
