fix ui, structure of plugin

--- a/packages/amplication-client/src/Plugins/PluginsCatalogItem.scss
+++ b/packages/amplication-client/src/Plugins/PluginsCatalogItem.scss
@@ -1,7 +1,6 @@
 @import "../style/index.scss";
 
 $logo-size: 44px;
-$logo-background: #dcb21a;
 $order-badge-size: 14px;
 
 .plugins-catalog-item {
@@ -9,29 +8,44 @@ $order-badge-size: 14px;
   margin-bottom: var(--default-spacing);
 
   &__row {
-    @include flexFullRowWithSpacing;
+    display: flex;
     margin-bottom: var(--default-spacing);
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 
     &:last-child {
       margin-bottom: 0;
     }
   }
-  &__title {
-    @include body1;
-    color: var(--black100);
-    margin-top: var(--default-spacing-small);
-  }
-  &__description {
-    @include body2;
-    color: var(--black80);
-  }
 
   &__logo {
     width: $logo-size;
     height: $logo-size;
-    background-color: $logo-background;
+    background-color: var(--black40);
     border-radius: var(--default-border-radius);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__details {
+    margin-left: 16px;
+    flex: 1;
+
+    &__title {
+      @include title-14;
+      color: var(--black100);
+    }
+    &__description {
+      @include regular-12;
+      color: var(--black80);
+    }
+  }
+
+  &__install {
+    padding: 5px 12px;
+    min-width: 60px;
   }
 
   &__order {
