fix(client) fix link - redirect to log page and add the link to the resource page

--- a/packages/amplication-client/src/VersionControl/CommitResourceListItem.scss
+++ b/packages/amplication-client/src/VersionControl/CommitResourceListItem.scss
@@ -43,6 +43,15 @@
     display: flex;
     align-items: center;
     padding: 0 var(--default-spacing-small);
+
+    a {
+      display: flex;
+      align-items: center;
+    }
+    .amp-icon {
+      margin-left: var(--icon-spacing);
+      transform: rotate(45deg);
+    }
   }
 
   &__changes-count {
