--- a/packages/amplication-client/src/VersionControl/CommitResourceList.scss
+++ b/packages/amplication-client/src/VersionControl/CommitResourceList.scss
@@ -1,6 +1,16 @@
 @import "../style/index.scss";
+$svg-img-width: 200px;
+$svg-img-height: 200px;
 
 .commit-resource-list {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  &__content {
+    flex: 1;
+  }
+
   &__title {
     @include regular-10;
     color: var(--black60);
