--- a/packages/amplication-client/src/Resource/create-message-broker/CreateMessageBroker.scss
+++ b/packages/amplication-client/src/Resource/create-message-broker/CreateMessageBroker.scss
@@ -1,22 +1,14 @@
 @use "sass:math";
 @import "../../style/index.scss";
 
-$max-width: 700px;
 
 .create-message-broker {
-  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  height: 100%;
   width: 100%;
-  position: absolute;
-
-  &__splitWrapper {
-    display: flex;
-    height: 100%;
-  }
-
-  &__left {
+  
+  &__wrapper {
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -25,19 +17,12 @@ $max-width: 700px;
     background: var(--black2);
   }
 
-  &__right {
-    flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: var(--white);
-  }
   &__description {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 66%;
+    width: 450px;
 
     .circle-badge i {
       color: var(--black5);
@@ -47,33 +32,28 @@ $max-width: 700px;
 
   &__description_top {
     margin-top: 24px;
-    width: 450px;
-    height: 72px;
   }
 
   &__description_bottom {
-    width: 450px;
     margin-top: 8px;
   }
 
   h2 {
     @include title-24;
     text-align: center;
+    margin: 0;
   }
 
   h3 {
     @include regular-14;
     text-align: center;
-    margin: 0px;
+    margin: 0;
   }
 
   &__footer {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     padding: 16px;
-    height: 26px;
     background: var(--black10);
   }
 
@@ -86,7 +66,7 @@ $max-width: 700px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
+    gap: 24px;
     height: 100%;
     background: var(--white);
 
@@ -113,20 +93,18 @@ $max-width: 700px;
     }
 
     &__tagline {
-      //@include body2;
-      font-size: 10px;
-      line-height: 15px;
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
+      font-size: 10px;
+      line-height: 15px;
       color: var(--black80);
     }
 
     .svg-theme-image {
-      width: 200px;
-      height: 200px;
-      margin: 50px;
+      width: 250px;
+      height: 250px;
     }
   }
 }
