--- a/packages/amplication-client/src/Workspaces/ResourceList.scss
+++ b/packages/amplication-client/src/Workspaces/ResourceList.scss
@@ -2,9 +2,9 @@
 $empty-state-image-size: 120px;
 
 .resource-list {
-  
   display: flex;
   flex-direction: column;
+  height: 100%;
 
   &__header {
     @include flexFullRowWithSpacing;
@@ -20,7 +20,7 @@ $empty-state-image-size: 120px;
     border: none;
     background-color: var(--black5);
   }
-  
+
   &__title {
     @include body2;
     margin-bottom: var(--default-spacing-small);
@@ -30,31 +30,6 @@ $empty-state-image-size: 120px;
     display: flex;
     flex-direction: column;
     gap: var(--large-spacing);
-  }
-
-  &__empty-state {
-    .svg-theme-image {
-      width: 250px;
-      height: 250px;
-    }
-
-    margin-bottom: 50px;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-    img {
-      height: $empty-state-image-size;
-    }
-
-    &__title {
-      @include pageTitle;
-      color: var(--black60);
-      text-align: center;
-      margin-bottom: var(--large-spacing);
-      font-size: 18px;
-    }
+    flex: 1;
   }
 }
