--- a/packages/amplication-client/src/style/dark-css-variables.css
+++ b/packages/amplication-client/src/style/dark-css-variables.css
@@ -13,7 +13,7 @@
   --black5: #2c3249; /*dark: black80 */
   --black2: #22273c; /*dark: black90 */
 
-  --welcome-page-stripe-background: var(--black2);
+  --welcome-page-stripe-background: var(--white);
   --panel-hover-background: var(--black100);
 
   --panel-background: var(--black5);
@@ -44,7 +44,6 @@
   --image-commit-empty-state: url("../assets/images/mono/commit-empty-state-dark.svg");
   --image-code-view-empty-state: url("../assets/images/mono/code-view-empty-state-dark.svg");
   --plugin-installation-empty: url("../assets/images/mono/plugin-installation-empty-dark.svg");
-
 
   --diffViewerBackground: var(--white);
   --diffViewerColor: var(--black100);
