--- a/packages/amplication-design-system/src/style/parameters.scss
+++ b/packages/amplication-design-system/src/style/parameters.scss
@@ -17,6 +17,7 @@ $breakpoint-large-desktop: 1200px;
 $page-content-max-width: 1600px;
 $page-content-min-width: 900px;
 
+$loading-z-index: 10001;
 $detect-screen-resolution-z-index: 10000;
 $command-palette-z-index: 9995;
 $side-bar-z-index: 9990;
