--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -257,6 +257,10 @@ $bullet-size: 6px;
     }
   }
 
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+
   // For Internet Explorer
   & {
     scrollbar-face-color: $foreground-color;
