chevron now stays in one location regardless of text length

--- a/packages/amplication-client/src/Resource/git/GitActions/ExistingConnectionsMenu.scss
+++ b/packages/amplication-client/src/Resource/git/GitActions/ExistingConnectionsMenu.scss
@@ -7,16 +7,26 @@
   &__menu {
     margin-left: 0 !important;
     box-sizing: border-box;
-    padding: 0px 12px;
+    padding: 0px 6px;
     gap: 8px;
-    display:inline-flex;
+    width: 248px;
     height: 28px;
     background: var(--black5);
     border: $border-black20;
     border-radius: var(--small-border-radius);
 
-    .amp-button.amp-button--text {
+    .amp-button {
       height: 28px;
+      width: 100%;
+      justify-content: space-between;
+      padding-left: 2px;
+
+      .menu-item-content__text {
+        max-width: 180px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
     }
 
     &__hr {
