--- a/packages/amplication-client/src/Topics/TopicList.scss
+++ b/packages/amplication-client/src/Topics/TopicList.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  min-height: 0;
 
   .search-field {
     margin-left: 0;
@@ -17,8 +18,6 @@
   &__list {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    flex-basis: 0px;
     gap: var(--default-spacing-small);
     margin-bottom: var(--default-spacing);
     overflow-x: hidden;
