--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -4,16 +4,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-
-  &__project-wrapper {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    
-    .amp-button {
-      justify-content: flex-start;
-    }
-  }
+  min-height: 0;
 
   &__label {
     @include regular-12;
