align center icon in workspace selector

--- a/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
@@ -72,6 +72,8 @@
         color: var(--positive-default);
       }
 
+      align-items: center;
+
       &:hover {
         background-color: var(--black10);
       }
