--- a/packages/amplication-client/src/VersionControl/BuildStatusIcon.scss
+++ b/packages/amplication-client/src/VersionControl/BuildStatusIcon.scss
@@ -1,6 +1,6 @@
 @import "../style/index.scss";
 
-.build-status-icons {
+.build-status-icon {
   &__status {
     display: flex;
     justify-content: center;
@@ -10,6 +10,22 @@
       color: var(--black80);
       margin-left: var(--default-spacing);
       font-size: var(--icon-font-size);
+    }
+  }
+  &--completed {
+    i {
+      color: var(--positive-default) !important;
+    }
+  }
+
+  &--failed {
+    i {
+      color: var(--negative) !important;
+    }
+  }
+  &--running {
+    i {
+      color: var(--black20) !important;
     }
   }
 }
