--- a/packages/amplication-client/src/ServiceConnections/topics/ServiceTopicPatternMenu.scss
+++ b/packages/amplication-client/src/ServiceConnections/topics/ServiceTopicPatternMenu.scss
@@ -5,6 +5,6 @@
     @include headline-description;
     font-weight: 400;
     color: var(--menu-item-color);
-    padding-bottom: 4px;
+    margin-bottom: 4px;
   }
 }
