fix: styles for issues 3891 & 3895

--- a/packages/amplication-client/src/VersionControl/BuildPage.scss
+++ b/packages/amplication-client/src/VersionControl/BuildPage.scss
@@ -24,9 +24,10 @@ $icon-size: 20px;
   }
   &__build-details {
     display: flex;
-    direction: row;
+    flex-direction: row;
 
     .log-container {
+      height: 500px;
       margin-left: var(--double-spacing);
     }
   }
