--- a/packages/amplication-client/src/Project/ProjectList.scss
+++ b/packages/amplication-client/src/Project/ProjectList.scss
@@ -5,7 +5,7 @@
   flex: 1;
   flex-direction: column;
   min-height: 0;
-  
+
   &__items {
     overflow-y: auto;
     @include scrollbars(16px, var(--black60), transparent);
@@ -26,6 +26,23 @@
 
     .amp-button__icon {
       margin: 0;
+    }
+  }
+}
+
+.new-project {
+  .amp-button {
+    margin: var(--large-spacing) 0;
+    width: 100%;
+    justify-content: center;
+
+    &:hover:not(:disabled) {
+      background-color: var(--dark-purple);
+    }
+
+    &:hover:disabled {
+      color: var(--white);
+      background: var(--black20);
     }
   }
 }
