fix: #3935 ResourceListItem Wrong Hover Effect
Fixes border and horizontal rule disappearing on hover.

fixes: #3935

--- a/packages/amplication-design-system/src/components/Panel/Panel.scss
+++ b/packages/amplication-design-system/src/components/Panel/Panel.scss
@@ -35,6 +35,11 @@ $expandable-transition-duration: 0.1s;
     cursor: pointer;
     &:hover {
       background: var(--panel-hover-background);
+      border: $border-black20;
+
+      .amp-horizontal-rule {
+        border-top: $border-black20;
+      }
     }
   }
 
