--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @mixin fontMono {
   font-family: "DM Mono", monospace;
 }
@@ -243,12 +245,12 @@ $bullet-size: 6px;
     background-color: rgba($foreground-color, .5);
     border-radius: $size * 0.5;
     background-clip: padding-box;
-    border: $size/3 solid transparent;
+    border: math.div($size, 3) solid transparent;
   }
   
   &::-webkit-scrollbar-track {
     background-color: $background-color;
-    margin: -$size/3;
+    margin: math.div(-$size, 3);
   }
 
   &:hover {
