--- a/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
+++ b/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
@@ -1,6 +1,7 @@
 @import "../style/index.scss";
 
 .service-topics {
+  height: 100%;
 
   &__header {
     display: flex;
@@ -35,5 +36,8 @@
     > .amp-horizontal-rule {
       margin: 24px 0;
     }
+    height: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
