--- a/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
+++ b/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
@@ -7,8 +7,8 @@
     display: flex;
     flex-direction: column;
     gap: var(--large-spacing);
-    
-    &__top {  
+
+    &__top {
       display: flex;
       align-items: center;
       gap: var(--default-spacing-small);
@@ -16,7 +16,7 @@
 
       &__title {
         font-size: 18px;
-        font-weight: 600;  
+        font-weight: 600;
       }
     }
 
@@ -24,15 +24,17 @@
       font-weight: 400;
       font-size: 14px;
       color: white;
-    } 
+    }
 
     .toggle-field {
       margin-left: auto;
       margin-bottom: 0;
     }
-
   }
 
+  &__list {
+    flex: 1;
+  }
   .amp-form {
     > .amp-horizontal-rule {
       margin: 24px 0;
