style: Fixed the issue where the last commit details were hidden where there are no pending changes

--- a/packages/amplication-client/src/VersionControl/Commit.scss
+++ b/packages/amplication-client/src/VersionControl/Commit.scss
@@ -15,7 +15,7 @@
     }
 
     textarea {
-      height: var(--textarea-height);
+      height: var(--textarea-height-small);
       background-color: var(--black5);
     }
   }
