--- a/packages/amplication-client/src/style/dark-css-variables.css
+++ b/packages/amplication-client/src/style/dark-css-variables.css
@@ -43,6 +43,7 @@
   --image-create-service-wizard: url("../assets/images/mono/service-wizard-create.svg");
   --image-commit-empty-state: url("../assets/images/mono/commit-empty-state-dark.svg");
   --image-code-view-empty-state: url("../assets/images/mono/code-view-empty-state-dark.svg");
+  --image-message-broker-empty-state: url("../assets/images/mono/message-broker-empty-state-dark.svg");
   --plugin-installation-empty: url("../assets/images/mono/plugin-installation-empty-dark.svg");
 
   --diffViewerBackground: var(--white);
