--- a/packages/amplication-client/src/app/style copy/dark-css-variables.css
+++ b/packages/amplication-client/src/app/style copy/dark-css-variables.css
@@ -29,21 +29,21 @@
   --action-log-header-color: var(--black100);
   --action-log-step-color: var(--black100);
 
-  --image-roles: url("../../assets/images/mono/roles-dark.svg");
-  --image-entities: url("../../assets/images/mono/entities-dark.svg");
-  --image-sync-github: url("../../assets/images/mono/sync-github-dark.svg");
-  --image-commit: url("../../assets/images/mono/commit-dark.svg");
-  --image-no-changes: url("../../assets/images/mono/no-changes-dark.svg");
-  --image-add-resource: url("../../assets/images/mono/add-resource-dark.svg");
-  --image-relations: url("../../assets/images/mono/relations-dark.svg");
-  --image-import-excel: url("../../assets/images/mono/import-excel-dark.svg");
-  --image-drop-excel: url("../../assets/images/mono/drop-excel-dark.svg");
-  --image-my-resources: url("../../assets/images/mono/my-resources-dark.svg");
-  --image-generating: url("../../assets/images/mono/generating-dark.svg");
-  --image-create-service-wizard: url("../../assets/images/mono/service-wizard-create.svg");
-  --image-commit-empty-state: url("../../assets/images/mono/commit-empty-state-dark.svg");
-  --image-code-view-empty-state: url("../../assets/images/mono/code-view-empty-state-dark.svg");
-  --plugin-installation-empty: url("../../assets/images/mono/plugin-installation-empty-dark.svg");
+  --image-roles: url("../assets/images/mono/roles-dark.svg");
+  --image-entities: url("../assets/images/mono/entities-dark.svg");
+  --image-sync-github: url("../assets/images/mono/sync-github-dark.svg");
+  --image-commit: url("../assets/images/mono/commit-dark.svg");
+  --image-no-changes: url("../assets/images/mono/no-changes-dark.svg");
+  --image-add-resource: url("../assets/images/mono/add-resource-dark.svg");
+  --image-relations: url("../assets/images/mono/relations-dark.svg");
+  --image-import-excel: url("../assets/images/mono/import-excel-dark.svg");
+  --image-drop-excel: url("../assets/images/mono/drop-excel-dark.svg");
+  --image-my-resources: url("../assets/images/mono/my-resources-dark.svg");
+  --image-generating: url("../assets/images/mono/generating-dark.svg");
+  --image-create-service-wizard: url("../assets/images/mono/service-wizard-create.svg");
+  --image-commit-empty-state: url("../assets/images/mono/commit-empty-state-dark.svg");
+  --image-code-view-empty-state: url("../assets/images/mono/code-view-empty-state-dark.svg");
+  --plugin-installation-empty: url("../assets/images/mono/plugin-installation-empty-dark.svg");
 
   --diffViewerBackground: var(--white);
   --diffViewerColor: var(--black100);
