--- a/packages/amplication-client/src/style/light-css-variables.css
+++ b/packages/amplication-client/src/style/light-css-variables.css
@@ -29,18 +29,18 @@
   --action-log-header-color: var(--white);
   --action-log-step-color: var(--white);
 
-  --image-roles: url("../../assets/images/mono/roles.svg");
-  --image-entities: url("../../assets/images/mono/entities.svg");
-  --image-sync-github: url("../../assets/images/mono/sync-github.svg");
-  --image-commit: url("../../assets/images/mono/commit.svg");
-  --image-no-changes: url("../../assets/images/mono/no-changes.svg");
-  --image-add-resource: url("../../assets/images/mono/add-resource.svg");
-  --image-relations: url("../../assets/images/mono/relations.svg");
-  --image-import-excel: url("../../assets/images/mono/import-excel.svg");
-  --image-drop-excel: url("../../assets/images/mono/drop-excel-dark.svg");
-  --image-my-resources: url("../../assets/images/mono/my-resources.svg");
-  --image-generating: url("../../assets/images/mono/generating.svg");
-  --plugin-installation-empty: url("../../assets/images/mono/plugin-installation-empty.svg");
+  --image-roles: url("../assets/images/mono/roles.svg");
+  --image-entities: url("../assets/images/mono/entities.svg");
+  --image-sync-github: url("../assets/images/mono/sync-github.svg");
+  --image-commit: url("../assets/images/mono/commit.svg");
+  --image-no-changes: url("../assets/images/mono/no-changes.svg");
+  --image-add-resource: url("../assets/images/mono/add-resource.svg");
+  --image-relations: url("../assets/images/mono/relations.svg");
+  --image-import-excel: url("../assets/images/mono/import-excel.svg");
+  --image-drop-excel: url("../assets/images/mono/drop-excel-dark.svg");
+  --image-my-resources: url("../assets/images/mono/my-resources.svg");
+  --image-generating: url("../assets/images/mono/generating.svg");
+  --plugin-installation-empty: url("../assets/images/mono/plugin-installation-empty.svg");
 
   --diffViewerBackground: var(--white);
   --diffViewerColor: var(--black100);
