Remove outline for focused components introduced in React 18

--- a/packages/amplication-client/src/index.scss
+++ b/packages/amplication-client/src/index.scss
@@ -26,8 +26,10 @@ body {
   height: 100%;
 }
 
-div[tabindex="-1"]:focus {
-  outline: 0;
+div[tabindex="-1"]:focus,
+button:focus,
+summary:focus {
+  outline: 0 !important;
 }
 
 .amp-page main {
