--- a/packages/amplication-client/src/VersionControl/BuildPage.scss
+++ b/packages/amplication-client/src/VersionControl/BuildPage.scss
@@ -1,5 +1,6 @@
 @import "../style/index.scss";
 
+$log-min-width: 360px;
 $icon-size: 20px;
 
 .build-page {
@@ -27,6 +28,8 @@ $icon-size: 20px;
     direction: row;
 
     .log-container {
+      flex: 1;
+      min-width: $log-min-width;
       margin-left: var(--double-spacing);
     }
   }
