--- a/packages/amplication-client/src/Entity/EntityList.scss
+++ b/packages/amplication-client/src/Entity/EntityList.scss
@@ -1,9 +1,19 @@
 @import "../style/index.scss";
 
 .entity-list {
+  .limitation-notification {
+    margin-bottom: var(--default-spacing-small);
+  }
+
+  &__separator {
+    margin: var(--large-spacing) 0;
+    height: 1px;
+    border: none;
+    background-color: var(--black5);
+  }
+
   &__header {
     @include flexFullRowWithSpacing;
-    margin-bottom: var(--large-spacing);
 
     .search-field {
       width: var(--form-field-long);
@@ -12,7 +22,7 @@
 
   &__title {
     @include body2;
-    margin-bottom: var(--large-spacing);
+    margin-bottom: var(--default-spacing-small);
   }
 
   &__content {
