--- a/packages/amplication-client/src/Purchase/PurchasePage.scss
+++ b/packages/amplication-client/src/Purchase/PurchasePage.scss
@@ -1,7 +1,16 @@
 .purchase-page {
   flex: 1;
   background-color: #22273c;
-  padding-top: 200px;
+  padding-top: 75px;
+
+  &__header {
+    display: flex;
+    font-size: 24px;
+    font-weight: 700;
+    color: #ffffff;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
 }
 
 .stigg-skeleton-loader-billing-period {
