--- a/packages/amplication-design-system/src/components/PlanUpgradeConfirmation/PlanUpgradeConfirmation.scss
+++ b/packages/amplication-design-system/src/components/PlanUpgradeConfirmation/PlanUpgradeConfirmation.scss
@@ -37,10 +37,15 @@
       width: 200px;
     }
 
-    &__description {
+    &__description_purchase {
       font-size: 14px;
       font-weight: 600;
       margin-bottom: 4px;
+    }
+
+    &__description_details {
+      font-size: 14px;
+      font-weight: 400;
     }
 
     &__keep_building {
