--- a/packages/amplication-client/src/Purchase/PurchasePage.scss
+++ b/packages/amplication-client/src/Purchase/PurchasePage.scss
@@ -25,6 +25,7 @@
   background-color: #15192c !important;
   border: 1px solid #373d57 !important;
 }
+
 .react-loading-skeleton {
   --base-color: #15192c !important;
   --highlight-color: rgba(255, 255, 255, 0.1) !important;
@@ -35,6 +36,7 @@
   border: 1px solid #373d57 !important;
   max-width: 244px !important;
   min-width: 244px !important;
+  padding-top: 16px !important;
 }
 
 .stigg-plan-offering-container:nth-child(1) {
@@ -51,7 +53,7 @@
 
 .stigg-header-wrapper {
   margin: 0 -24px !important;
-  padding: 0 24px 9px 24px !important;
+  padding: 0 24px 24px 24px !important;
   border-bottom: 1px solid #373d57 !important;
 }
 
@@ -63,6 +65,27 @@
   padding-bottom: 0 !important;
 }
 
+.stigg-plan-offering-container .stigg-plan-header::before {
+  display: block;
+  content: "";
+  height: 18px;
+  margin-bottom: 8px;
+}
+
+.stigg-current-plan .stigg-plan-header::before {
+  display: block;
+  content: "Current plan";
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 18px;
+  color: #a787ff;
+  margin-left: -4px;
+}
+
+.stigg-current-plan .stigg-paywall-plan-button {
+  visibility: hidden;
+}
+
 .stigg-price-text {
   order: 1;
   font-size: 40px !important;
@@ -72,7 +95,17 @@
 
 .stigg-price-billing-period-text {
   order: 2;
+  font-size: 10px;
   line-height: 15px;
+}
+
+.stigg-plan-offering-container:nth-child(2)
+  .stigg-price-billing-period-text::after {
+  content: "Billed monthly";
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
+  color: #a3a8b8;
 }
 
 .stigg-plan-description {
