--- a/packages/amplication-design-system/src/components/LimitationNotification/LimitationNotification.scss
+++ b/packages/amplication-design-system/src/components/LimitationNotification/LimitationNotification.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px dashed #444b66;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='8' ry='8' stroke='%23444B66FF' stroke-width='1' stroke-dasharray='6%2c6' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
   border-radius: 8px;
   color: var(--black80);
   min-height: 42px;
