--- a/packages/amplication-client/src/Purchase/PurchasePage.scss
+++ b/packages/amplication-client/src/Purchase/PurchasePage.scss
@@ -11,6 +11,32 @@
     justify-content: center;
     margin-bottom: 50px;
   }
+
+  &__contact {
+    padding: 80px 368px;
+    gap: 32px;
+    background: #15192c;
+  }
+  &__contact_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #ffffff;
+    p {
+      font-weight: 700;
+      font-size: 24px;
+      margin: 8px;
+    }
+    label {
+      font-size: 14px;
+    }
+  }
+  &__contact_btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+  }
 }
 
 .stigg-skeleton-loader-billing-period {
