--- a/packages/amplication-client/src/Purchase/PurchasePage.scss
+++ b/packages/amplication-client/src/Purchase/PurchasePage.scss
@@ -1,5 +1,8 @@
 .purchase-page {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #22273c;
   padding-top: 75px;
 
@@ -8,7 +11,6 @@
     font-size: 24px;
     font-weight: 700;
     color: #ffffff;
-    justify-content: center;
     margin-bottom: 50px;
   }
 }
