use vars for colors

--- a/packages/amplication-client/src/Purchase/PromoBanner.scss
+++ b/packages/amplication-client/src/Purchase/PromoBanner.scss
@@ -6,7 +6,7 @@
   background-image: url("../assets/images/promo.png");
   background-size: cover;
   margin-bottom: 40px;
-  border: 3px solid #ffffff;
+  border: 3px solid var(--black100);
   box-shadow: 0px 36px 38px -19px rgba(9, 11, 20, 0.7);
   border-radius: 8px;
 
@@ -17,7 +17,7 @@
     padding: 32px;
 
     &__label {
-      background: #373d57;
+      background: var(--black10);
       border-radius: 32px;
       padding: 2px 12px;
       margin-bottom: 15px;
@@ -25,26 +25,26 @@
       &__text {
         font-size: 12px;
         font-weight: 500;
-        color: #ffffff;
+        color: var(--black100);
       }
     }
 
     &__title {
       font-size: 24px;
       font-weight: 700;
-      color: #ffffff;
+      color: var(--black100);
     }
 
     &__description {
       font-size: 14px;
       font-weight: 400;
-      color: #ffffff;
+      color: var(--black100);
     }
 
     &__free {
       font-size: 14px;
       font-weight: 700;
-      color: #ffffff;
+      color: var(--black100);
       margin-bottom: 8px;
     }
 
@@ -55,13 +55,13 @@
       &__label {
         font-size: 18px;
         font-weight: 400;
-        color: #ffffff;
+        color: var(--black100);
       }
 
       &__code {
         font-size: 18px;
         font-weight: 600;
-        color: #53dbee;
+        color: var(--dark-secondary-turquoise);
       }
     }
   }
