--- a/packages/amplication-client/src/Purchase/PurchasePage.scss
+++ b/packages/amplication-client/src/Purchase/PurchasePage.scss
@@ -34,65 +34,29 @@
   }
 
   &__contact {
-    padding: 80px 368px;
-    gap: 32px;
-    background: #15192c;
-  }
-  &__contact_content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #ffffff;
-    p {
-      font-weight: 700;
-      font-size: 24px;
-      margin: 8px;
-    }
-    label {
-      font-size: 14px;
-    }
-  }
-  &__contact_btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 16px;
-  }
-  &__contact_pro_btn {
-    color: var(--static-white);
-  }
-  &__contact_pro_btn:hover {
-    background-color: var(--dark-purple);
-    border-color: var(--dark-purple);
-  }
-
-  &__contact {
-    padding: 80px 368px;
-    gap: 32px;
+    align-self: stretch;
+    padding: 50px 0;
+    gap: 24px;
     background: #15192c;
 
-    &_content {
+    &__content {
       display: flex;
       flex-direction: column;
       align-items: center;
       color: #ffffff;
+      gap: 8px;
 
-      p {
+      &__header {
         font-weight: 700;
         font-size: 24px;
-        margin: 8px;
       }
 
-      label {
+      &__description {
         font-size: 14px;
       }
-    }
-
-    &_btn {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 16px;
     }
 
     &_pro_btn {
@@ -102,6 +66,28 @@
     &_pro_btn:hover {
       background-color: var(--dark-purple);
       border-color: var(--dark-purple);
+    }
+  }
+
+  &__footer {
+    margin: 80px 64px 0;
+    align-self: stretch;
+    display: flex;
+    justify-content: space-between;
+    padding: 32px 0;
+
+    border-top: 1px solid var(--black5);
+
+    &__copyright {
+      color: var(--black80);
+    }
+
+    &__links {
+      display: flex;
+      gap: 24px;
+
+      size: 14px;
+      text-decoration-line: underline;
     }
   }
 }
