fix(client): text input length

--- a/packages/amplication-design-system/src/components/TextInput/TextInput.scss
+++ b/packages/amplication-design-system/src/components/TextInput/TextInput.scss
@@ -2,6 +2,7 @@
 
 .text-input {
   position: relative;
+  max-width: var(--form-field-long);
 
   &--with-trailing-button .text-input__inner-wrapper {
     display: flex;
@@ -37,7 +38,6 @@
   label {
     @include label;
     position: relative;
-    width: fit-content;
   }
 
   input,
