fix(client): remove Model component from childrens and fix css split

--- a/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
+++ b/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
@@ -14,6 +14,7 @@ $max-width: 700px;
   &__splitWrapper {
     display: flex;
     height: 100%;
+    width: 100%;
   }
 
   &__service_name_header {
