--- a/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
+++ b/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
@@ -33,7 +33,7 @@ $max-width: 700px;
     align-items: center;
   }
 
-  &__test {
+  &__github_box {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -155,5 +155,11 @@ $max-width: 700px;
       height: 200px;
       margin: 50px;
     }
+  }
+}
+
+.auth-app-with-github {
+  .select-menu__modal {
+    right: 24.8 !important;
   }
 }
